# Pipeline-and-Shading

./: .gitignore  CMakeLists.txt  README.md
include/: Texture.hpp  Triangle.hpp  mainwindow.h
models/wood/: test.mtl
src/: Triangle.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  rasterizer.cpp
test/: RasterizerTest.cpp  TriangleTest.cpp
